# llm-commit-msg

./: .venv  Makefile  README.md  pyproject.toml  requirements.txt  sample.diff
commitmsg/: __main__.py  constants.py
docs/: README.md  about.md  configuration.md  development.md  installation.md  todo.md  usage.md
llmcommitmsg/: __main__.py  constants.py  git_actions.py  llm.py
tests/: test_llm.py
